--- a/install_apche.yml
+++ b/install_apche.yml
@@ -6,12 +6,21 @@
   - name: update repository index
     apt: 
       update_cache: yes
+    when: ansible_distribution == "ubuntu"
 
   - name: install apache2 package 
     apt:
-      name: apache2
+      name:
+       - apache2
+       - libapache2-mod-php 
       state:  latest
+    when: ansible_distribution == "ubuntu"
+
   - name: add php support for apache 
-    apt:
-      name: libapache2-mod-php
+    dnf:
+      name: 
+       - httpd
+       - php
       state: latest           
+    when: ansible_distribution == "Centos"
+   
